--- a/player.html
+++ b/player.html
@@ -1,62 +1,46 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>المشغل</title>
+  <title>المشغّل</title>
   <style>
-    body { margin:0; background:#000; color:#fff; display:flex; flex-direction:column; align-items:center; justify-content:center; height:100vh; }
-    video { width:100%; max-width:900px; background:#000; border-radius:10px; }
-    .actions{margin-top:8px;display:flex;gap:10px;}
-    a.btn{padding:10px 14px;border-radius:8px;text-decoration:none;font-weight:700}
-    .btn-close{background:#ff5252;color:#fff;}
-    .btn-open{background:#1976d2;color:#fff;}
+    html,body{margin:0;height:100%;background:#000;color:#fff;font-family:system-ui, Arial;}
+    .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:12px;box-sizing:border-box;}
+    video{width:min(100%,1000px);height:auto;background:#000;border-radius:12px;}
+    .bar{max-width:1000px;margin:8px auto;display:flex;justify-content:space-between;align-items:center;gap:10px;}
+    .btn{background:#1976d2;color:#fff;padding:8px 12px;border:0;border-radius:10px;cursor:pointer;font-weight:700;text-decoration:none;}
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
-  <video id="v" controls autoplay playsinline webkit-playsinline></video>
-  <div class="actions">
-    <a id="srcBtn" class="btn btn-open" target="_blank">فتح المصدر</a>
-    <a href="index.html" class="btn btn-close">إغلاق</a>
+  <div class="wrap"><video id="v" controls playsinline webkit-playsinline preload="metadata"></video></div>
+  <div class="bar">
+    <a id="openSrc" class="btn" target="_blank" rel="noopener">فتح المصدر</a>
+    <div id="title">قناة مباشرة</div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script>
-    const q=new URLSearchParams(location.search);
-    const raw=q.get("src")||"";
-    const title=q.get("title")||"قناة مباشرة";
-    document.title=title;
-    document.getElementById("srcBtn").href=raw;
+    const q = new URL(location.href).searchParams;
+    const src = q.get('src');
+    const title = q.get('title') || 'قناة مباشرة';
+    document.getElementById('title').textContent = title;
+    document.getElementById('openSrc').href = src || '#';
 
-    const video=document.getElementById("v");
-
-    // لو كان الرابط TS فقط → نحوله لقائمة M3U8 مؤقتة
-    function makeM3U8(tsUrl){
-      return [
-        "#EXTM3U",
-        "#EXT-X-VERSION:3",
-        "#EXT-X-TARGETDURATION:36000",
-        "#EXT-X-MEDIA-SEQUENCE:0",
-        "#EXTINF:36000.0,",
-        tsUrl,
-        "#EXT-X-ENDLIST"
-      ].join("\n");
-    }
-
-    let finalUrl=raw;
-    if (/\.ts(\?|$)/i.test(raw)){
-      const blob=new Blob([makeM3U8(raw)],{type:"application/vnd.apple.mpegURL"});
-      finalUrl=URL.createObjectURL(blob);
-    }
-
-    if(video.canPlayType("application/vnd.apple.mpegURL")){
-      video.src=finalUrl;
-    }else if(Hls.isSupported()){
-      const hls=new Hls();
-      hls.loadSource(finalUrl);
-      hls.attachMedia(video);
-    }else{
-      video.src=raw;
+    const video = document.getElementById('v');
+    if(!src){ document.body.innerHTML = '<h2 style="text-align:center">لا يوجد رابط</h2>'; }
+    else if (src.endsWith('.m3u8') || src.includes('.ts')) {
+      if (video.canPlayType('application/vnd.apple.mpegURL')) {
+        video.src = src; video.play().catch(()=>{});
+      } else if (window.Hls && Hls.isSupported()) {
+        const hls = new Hls({ enableWorker:true });
+        hls.loadSource(src);
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED, ()=>video.play().catch(()=>{}));
+      } else {
+        video.src = src; video.play().catch(()=>{});
+      }
+    } else {
+      video.src = src; video.play().catch(()=>{});
     }
   </script>
 </body>
