--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no" />
   <title>القنوات الرياضية – TV</title>
   <style>
-    :root{ --safe-pad:32px; --radius:22px; --focus-ring:5px; --accent:#ffc107; --v-gap:16px; --max-w:600px; }
-    @media (min-width:2560px){ :root{ --safe-pad:44px; --max-w:1100px; } }
-    html,body{ margin:0; height:100%; background:#212121; color:#fafafa;
+    :root{
+      --safe-pad: 32px;
+      --radius: 22px;
+      --focus-ring: 5px;
+      --accent: #ffc107;
+      --v-gap: 16px;
+      --max-w: 600px;
+    }
+    @media (min-width: 2560px){ :root{ --safe-pad: 44px; --max-w: 1100px; } }
+    html, body{
+      margin:0; height:100%;
+      background:#212121; color:#fafafa;
       font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Kufi Arabic","Noto Sans Arabic",Arial,sans-serif;
-      -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility; overscroll-behavior:none; }
+      -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility; overscroll-behavior:none;
+    }
     .page{ min-height:100%; box-sizing:border-box; padding:var(--safe-pad); display:flex; flex-direction:column; align-items:center; }
     header{ text-align:center; margin-bottom:14px; }
     header h1{ margin:0 0 4px; font-size:clamp(28px,4.5vw,62px); font-weight:800; }
@@ -18,11 +28,14 @@
     .tile{ position:relative; display:block; overflow:hidden; border-radius:var(--radius); background:transparent; outline:none; }
     .thumb{ display:block; width:100%; height:auto; object-fit:contain; background:transparent; border-radius:inherit; }
     .tile.link:focus{ outline:none; }
-    .tile.link:focus-visible::after,.tile.link[tabindex="0"]:focus::after{ content:""; position:absolute; inset:0; border:var(--focus-ring) solid var(--accent); border-radius:inherit; pointer-events:none; }
+    .tile.link:focus-visible::after, .tile.link[tabindex="0"]:focus::after{
+      content:""; position:absolute; inset:0; border:var(--focus-ring) solid var(--accent); border-radius:inherit; pointer-events:none;
+    }
     .banner{ pointer-events:none; }
     footer{ text-align:center; margin-top:20px; opacity:.9; font-weight:700; font-size:clamp(16px,2vw,22px); }
     main{ width:100%; scroll-behavior:auto; overscroll-behavior:contain; }
-    a,.tile{-webkit-tap-highlight-color:rgba(0,0,0,0);}
+    a, .tile { -webkit-tap-highlight-color: rgba(0,0,0,0); }
+
     /* طبقة المشغّل */
     .player-overlay{ position:fixed; inset:0; background:rgba(0,0,0,.88); display:none; align-items:center; justify-content:center; z-index:9999; }
     .player-card{ width:min(100%,900px); background:#000; border-radius:16px; padding:12px; }
@@ -33,8 +46,6 @@
     .btn-open-ext{ background:#1976d2; color:#fff; }
     .title{ font-weight:700; }
   </style>
-  <!-- مكتبة HLS -->
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
   <div class="page">
@@ -45,6 +56,7 @@
 
     <main>
       <div class="stack" id="stack" role="list">
+        <!-- لافتة افتتاحية -->
         <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation">
           <img class="thumb" loading="lazy" src="https://www4.0zz0.com/2024/02/01/09/100522793.png" alt="" />
         </div>
@@ -62,6 +74,7 @@
         <a class="tile link" href="go:13" tabindex="0" aria-label="قناة 13"><img class="thumb" loading="lazy" src="https://i.suar.me/jxBMz/l" alt="قناة 13" /></a>
         <a class="tile link" href="go:14" tabindex="0" aria-label="قناة 14"><img class="thumb" loading="lazy" src="https://i.suar.me/LV1xG/l" alt="قناة 14" /></a>
 
+        <!-- لافتة وسط -->
         <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation">
           <img class="thumb" loading="lazy" src="https://www4.0zz0.com/2024/02/01/09/194995613.png" alt="" />
         </div>
@@ -78,6 +91,7 @@
         <a class="tile link" href="go:16" tabindex="0" aria-label="قناة 16"><img class="thumb" loading="lazy" src="https://i.suar.me/32YWj/l" alt="قناة 16" /></a>
         <a class="tile link" href="go:17" tabindex="0" aria-label="قناة 17"><img class="thumb" loading="lazy" src="https://i.suar.me/oxe8O/l" alt="قناة 17" /></a>
 
+        <!-- لافتة -->
         <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/4aJYv/l" alt="" /></div>
 
         <!-- 18 - 20 -->
@@ -85,6 +99,7 @@
         <a class="tile link" href="go:19" tabindex="0" aria-label="قناة 19"><img class="thumb" loading="lazy" src="https://i.suar.me/KXOPZ/l" alt="قناة 19" /></a>
         <a class="tile link" href="go:20" tabindex="0" aria-label="قناة 20"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoZx/l" alt="قناة 20" /></a>
 
+        <!-- لافتة -->
         <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoPW/l" alt="" /></div>
 
         <!-- 21 - 23 -->
@@ -92,12 +107,14 @@
         <a class="tile link" href="go:22" tabindex="0" aria-label="قناة 22"><img class="thumb" loading="lazy" src="https://i.suar.me/LVdjx/l" alt="قناة 22" /></a>
         <a class="tile link" href="go:23" tabindex="0" aria-label="قناة 23"><img class="thumb" loading="lazy" src="https://i.suar.me/8e0aO/l" alt="قناة 23" /></a>
 
+        <!-- لافتة -->
         <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/rWdY7/l" alt="" /></div>
 
         <!-- 24 - 25 -->
         <a class="tile link" href="go:24" tabindex="0" aria-label="قناة 24"><img class="thumb" loading="lazy" src="https://i.suar.me/wWodN/l" alt="قناة 24" /></a>
         <a class="tile link" href="go:25" tabindex="0" aria-label="قناة 25"><img class="thumb" loading="lazy" src="https://i.suar.me/g8veK/l" alt="قناة 25" /></a>
 
+        <!-- لافتة -->
         <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/489277181.png" alt="" /></div>
 
         <!-- 26 - 28 -->
@@ -110,7 +127,10 @@
     <footer>Abu Faris TV Sport</footer>
   </div>
 
-  <!-- طبقة المشغل -->
+  <!-- HLS -->
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+
+  <!-- مشغّل الفيديو -->
   <div class="player-overlay" id="overlay" role="dialog" aria-modal="true" aria-label="مشغل الفيديو">
     <div class="player-card">
       <video id="player" controls playsinline webkit-playsinline preload="metadata"></video>
@@ -125,11 +145,11 @@
   </div>
 
   <script>
-    /* إعداد الوِركر */
+    /* عدّل هذا لو غيّرت اسم الWorker */
     const PROXY_ORIGIN = 'https://abufaris.salyami1980.workers.dev';
     const prox = (rawUrl) => `${PROXY_ORIGIN}/?url=${encodeURIComponent(rawUrl)}`;
 
-    /* روابط .ts الأصلية */
+    /* روابطك .ts */
     const RAW = {
       1:"http://storatv.com/live/0543539887/2280625079/483688.ts",
       2:"http://storatv.com/live/0543539887/2280625079/483657.ts",
@@ -168,21 +188,19 @@
     const closeBtn = document.getElementById('closeBtn');
     const titleEl = document.getElementById('chanTitle');
     const openExt = document.getElementById('openExternal');
-    let hlsInstance = null, blobUrl = null;
+    let hlsInstance=null, blobUrl=null;
 
-    // تركيز أول عنصر
-    (function(){
-      const first=document.querySelector('.tile.link');
-      if(first){ first.focus({preventScroll:true}); first.scrollIntoView({block:'center'}); }
-    })();
+    /* تركيز أول عنصر */
+    (function(){ const first=document.querySelector('.tile.link'); if(first){ first.focus({preventScroll:true}); first.scrollIntoView({block:'center'}); }})();
 
-    // فتح القناة
+    /* فتح القناة عند النقر */
     document.addEventListener('click',(e)=>{
       const a=e.target.closest('a.tile.link[href^="go:"]'); if(!a) return;
       e.preventDefault();
       const id=a.getAttribute('href').split(':')[1];
       const url=STREAMS[id]; if(!url){ alert('لا يوجد رابط'); return; }
       titleEl.textContent=a.getAttribute('aria-label')||('قناة '+id);
+
       playUrl(url);
     });
 
@@ -193,16 +211,17 @@
       const isM3U8=/\.m3u8(\?|$)/i.test(url);
       const isTS=/\.ts(\?|$)/i.test(url);
 
-      // زر "فتح في نافذة" — رابط مطلق
-      const base = location.origin + location.pathname.replace(/[^/]+$/, '');
-      const playerPage = `${base}player.html?src=${encodeURIComponent(url)}&title=${encodeURIComponent(titleEl.textContent||'قناة')}`;
-      openExt.href = playerPage; openExt.target = '_blank'; openExt.rel='noopener';
+      /* مهم: زر "فتح في نافذة" يفتح صفحة player.html مع تمرير الرابط */
+      const playerPage = `player.html?src=${encodeURIComponent(url)}`;
+      openExt.setAttribute('href', playerPage);
+      openExt.setAttribute('target', '_blank');
+      openExt.setAttribute('rel', 'noopener');
 
       if(isTS){
         const m3u8Text=makeSingleM3U8(url);
         const blob=new Blob([m3u8Text],{type:'application/vnd.apple.mpegURL'});
         blobUrl=URL.createObjectURL(blob);
-        startHls(blobUrl);
+        startHls(blobUrl); 
         return;
       }
       if(isM3U8){ startHls(url); return; }
@@ -218,17 +237,20 @@
         hlsInstance.loadSource(src);
         hlsInstance.attachMedia(videoEl);
         hlsInstance.on(Hls.Events.MANIFEST_PARSED,()=>videoEl.play().catch(()=>{}));
-      }else{
-        videoEl.src=src; videoEl.play().catch(()=>{});
-      }
+      }else{ videoEl.src=src; videoEl.play().catch(()=>{}); }
     }
 
-    // صنع M3U8 مؤقت من ملف TS واحد
+    /* نصنع قائمة تشغيل مؤقتة من ملف TS واحد */
     function makeSingleM3U8(tsUrl){
-      const TARGET=36000;
+      const TARGET=36000; /* 10 ساعات تقريبًا */
       return [
-        '#EXTM3U','#EXT-X-VERSION:3',`#EXT-X-TARGETDURATION:${TARGET}`,
-        '#EXT-X-MEDIA-SEQUENCE:0',`#EXTINF:${TARGET}.0,`,tsUrl,'#EXT-X-ENDLIST'
+        '#EXTM3U',
+        '#EXT-X-VERSION:3',
+        `#EXT-X-TARGETDURATION:${TARGET}`,
+        '#EXT-X-MEDIA-SEQUENCE:0',
+        `#EXTINF:${TARGET}.0,`,
+        tsUrl,
+        '#EXT-X-ENDLIST'
       ].join('\n');
     }
 
