--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no" />
   <title>القنوات الرياضية – TV</title>
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ccircle cx='32' cy='32' r='32' fill='%23212121'/%3E%3Cpath d='M18 22h28v20H18z' fill='%23ffc107'/%3E%3Cpath d='M21 25h22v14H21z' fill='%23000'/%3E%3C/svg%3E">
   <style>
     :root{ --safe-pad:32px; --radius:22px; --focus-ring:5px; --accent:#ffc107; --v-gap:16px; --max-w:600px; }
     @media (min-width:2560px){ :root{ --safe-pad:44px; --max-w:1100px; } }
@@ -120,7 +121,7 @@
   </div>
 
   <!-- HLS -->
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
 
   <!-- طبقة المشغّل -->
   <div class="player-overlay" id="overlay" role="dialog" aria-modal="true" aria-label="مشغل الفيديو">
@@ -173,10 +174,10 @@
       28:"http://storatv.com/live/0543539887/2280625079/763550.m3u8"
     };
 
-    /* نمرّرها عبر الوِركر (HTTPS) لتفادي التحميل وCORS */
+    /* تمرير عبر الوركر (HTTPS) */
     const STREAMS = Object.fromEntries(Object.entries(RAW).map(([k,v]) => [k, prox(v)]));
 
-    /* ===== عناصر الواجهة ===== */
+    /* عناصر الواجهة */
     const overlay = document.getElementById('overlay');
     const videoEl  = document.getElementById('player');
     const closeBtn = document.getElementById('closeBtn');
@@ -211,7 +212,7 @@
       openExt.target = '_blank';
       openExt.rel = 'noopener';
 
-      startHls(url); // الآن كلها m3u8، مباشرةً
+      startHls(url); // كلها m3u8
     }
 
     function startHls(src){
